# chemical-kinetics-solver

./: .cproject  .directory  .gitattributes  .gitignore  .project  LICENSE  Makefile.in  Readme.txt  aclocal.m4  configure  configure.ac  format.bash  gitignore  readme.md
Relase-Makefile/: makefile  sources.mk
Relase-Makefile/source/: subdir.mk
Release-Makefile-Linux/: makefile  objects.mk  sources.mk
Release-Makefile-MinGW/: makefile  objects.mk  sources.mk
doc/: build_code.md  run_the_code.md
headers/: Class_Initial_Data.hpp  Class_Reaction_Mechanism.hpp  Classes.h  Classes.hpp  Get_Input.h  Get_Input.hpp  Get_Process_Input.hpp  Global_Variables.h  Global_Variables.hpp  Handle_Initial_Conditions.h  Handle_Initial_Conditions.hpp  Headers.hpp  Helpers.h  Helpers.hpp  Mechanism_Reduction.h  Mechanism_Reduction.hpp  MyFunctions.h  MyFunctions.hpp  MyHeaders.h  Namespaces.h  Namespaces.hpp  PetroOxy.h  Pre-Process.h  Rates-Analysis.h  Rates-Analysis.hpp  Solver_Calculations.h  Structs.h  Structs.hpp  Write_Output.h  Write_Output.hpp  initial_data_handling.h
headers/structs/: Structs.h  (+5 more)
include/: Classes.hpp  Handle_Initial_Conditions.hpp  Headers.hpp
libraries/: where-to-get-the-library.txt
old/: Calculate_Rate_Constants.cpp  Calculate_Reaction_Rates.cpp  Evaluate_Thermodynamic_Parameters.cpp  ODE_RHS_Gas_Liquid_Phase.cpp  SpeciesLossRate.cpp  Synchronize_Gas_Liquid_Model.cpp
source/: C_delta_n.cpp  Global_Variables.cpp  Helpers.cpp  Main.cpp  Maint_Notes.txt  Make_Irreversible.cpp  Make_Irreversible_v2.cpp  Prepare_Jacobian_Matrix.cpp  Run_Integrator.cpp  tokenise_string.cpp
src/: C_delta_n.cpp  Class_Initial_Data.hpp  Class_Reaction_Mechanism.hpp  Global_Variables.cpp  Headers.h  Headers.hpp  Helpers.hpp  Main.cpp  Main.h  Make_Irreversible.cpp  Namespaces.hpp  PetroOxy.hpp  Process_User_Input.cpp  Rates-Analysis.hpp  Write_Output.hpp  global_const.h  global_struct.h  main.cpp  main.h
(+323 files in other folders)
